--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -21,6 +21,28 @@
                 <section class="mb-5">
                     <p class="fs-5 mb-4">{{single_blog.short_description}}</p>
                     <p class="fs-5 mb-4">{{single_blog.blog_body}}</p>
+                    <!--comments-->
+                    <h4>Comments({{comment_count}})</h4>
+                    {% if comments %}
+                    {% for comment in comments %}
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text mb-0">{{comment}}</p>
+                            <span>
+                                <small>{{comment.user}}</small>
+                                <small>{{comment.created_at | timesince}} ago</small>
+                            </span>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    {% else %}
+                    No Comments Yet
+                    {% endif %}
+                    <br>
+                    <div class="form-group">
+                        <textarea name="comment" class="form-control" placeholder="Write Your Comments"></textarea>
+                        <input type="submit" value="submit" class="btn btn-primary mt-2">
+                    </div>
                 </section>
             </article>
         </div>
