--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
           <h4 class="font-italic">{{about.about_heading}}</h4>
           <p class="mb-0">{{about.about_description}}</p>
         </div>
-        {% if social_links %}
+        {% if social_link %}
         <div class="p-3">
           <h4 class="font-italic">Follow Us</h4>
           <ol class="list-unstyled">
